--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,10 @@ repositories {
 dependencies {
     api 'org.apache.commons:commons-math3:3.6.1'
 
+    compile 'org.jetbrains:annotations:17.0.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.6.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation 'org.json:json:20160212'
     //implementation 'com.google.guava:guava:28.2-jre'
     implementation 'com.google.guava:guava:26.0-jre'
     implementation 'org.elastos.did:didsdk:1.1'
